[package]
name = "superdevquiz"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.2"
base64 = "0.22"
anyhow = "1.0"
rand = "0.8"
bs58 = "0.5"
env_logger = "0.10"
log = "0.4"
